force-app/main/default/objects/Assechmur_Devis__c/Assechmur_Devis__c.object-meta.xml
<CustomObject>
    <label>Devis</label>
    <nameField>
        <label>Nom du devis</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>