force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Acompte__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Acompte__c</fullName>
    <formula>Assechmur_MontantdevisHTVA__c * 0.35</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acompte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>