force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_CheckboxMontant__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_CheckboxMontant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox Montant</label>
    <type>Checkbox</type>
</CustomField>