force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Devissynchronise__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Devissynchronise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Devis synchronisé</label>
    <type>Checkbox</type>
</CustomField>