force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_incluredansledevisVMCencastrer__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_incluredansledevisVMCencastrer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inclure dans le montant total du devis</label>
    <type>Checkbox</type>
</CustomField>