force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_M2plafonner__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_M2plafonner__c</fullName>
    <label>M² à plafonner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>