force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Marge__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Marge__c</fullName>
    <label>Marge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>