force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Montantdevis__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Montantdevis__c</fullName>
    <formula>IF(
    ISPICKVAL(Assechmur_TVA__c, &quot;21%&quot;),
    Assechmur_MontantdevisHTVA__c * 1.21,
    IF(
        ISPICKVAL(Assechmur_TVA__c, &quot;6%&quot;),
        Assechmur_MontantdevisHTVA__c * 1.06,
        IF(
            ISPICKVAL(Assechmur_TVA__c, &quot;0%&quot;),
            Assechmur_MontantdevisHTVA__c * 1.00,
            0
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant devis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>