force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_MontantdevisBXL__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_MontantdevisBXL__c</fullName>
    <formula>Assechmur_Montantdevis__c * 1.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant devis BXL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>