force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_MontantdevisHTVA__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_MontantdevisHTVA__c</fullName>
    <label>Montant devis HTVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>