force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_MontantDevisHTVAintermediaire__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_MontantDevisHTVAintermediaire__c</fullName>
    <label>Montant Devis HTVA intermédiaire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>