force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_MontantTVA__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_MontantTVA__c</fullName>
    <formula>IF(
    ISPICKVAL(Assechmur_TVA__c, &quot;21%&quot;),
    Assechmur_MontantdevisHTVA__c * 0.21,
    IF(
        ISPICKVAL(Assechmur_TVA__c, &quot;6%&quot;),
        Assechmur_MontantdevisHTVA__c * 0.06,
        IF(
            ISPICKVAL(Assechmur_TVA__c, &quot;0%&quot;),
            0,
            0
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant TVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>