force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Nombredemachinecommande__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Nombredemachinecommande__c</fullName>
    <label>Nombre de machine - Commande</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>