force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_NombredemachineExtrac12V220V__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_NombredemachineExtrac12V220V__c</fullName>
    <label>Nombre de machine - Extracteur 12V-220V</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>