force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_NombredemachineExtracteur200__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_NombredemachineExtracteur200__c</fullName>
    <label>Nombre de machine - Extracteur 200</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>