force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Nombremurepais__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Nombremurepais__c</fullName>
    <label>Nombre mur épais</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>