force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Nombrevmcapeindre__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Nombrevmcapeindre__c</fullName>
    <label>Nombre VMC à peindre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>