force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Numerodudevis__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Numerodudevis__c</fullName>
    <label>Numéro du devis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>