force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Devis</relationshipLabel>
    <relationshipName>Devis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>