force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_PrixBruxellesapplicable__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_PrixBruxellesapplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prix Bruxelles applicable</label>
    <type>Checkbox</type>
</CustomField>