force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Prixm2aplafonner__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Prixm2aplafonner__c</fullName>
    <formula>IF(
   ISBLANK(Assechmur_M2plafonner__c), 
   NULL, 
   IF(
      AND(Assechmur_M2plafonner__c &gt; 0, Assechmur_M2plafonner__c &lt;= 10), 
      775, 
      IF(
         AND(Assechmur_M2plafonner__c &gt;= 11, Assechmur_M2plafonner__c &lt;= 15), 
         1150, 
         IF(
            AND(Assechmur_M2plafonner__c &gt;= 16, Assechmur_M2plafonner__c &lt;= 20), 
            1500, 
            IF(Assechmur_M2plafonner__c &gt; 20, Assechmur_M2plafonner__c * 75, 0)
         )
      )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix m² à plafonner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>