force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Prixmurapeindre__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Prixmurapeindre__c</fullName>
    <formula>IF(Assechmur_Nombrevmcapeindre__c = 1, 75, Assechmur_Nombrevmcapeindre__c * 40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix mur à peindre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>