force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Prixmurepais__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Prixmurepais__c</fullName>
    <label>Prix mur épais</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>