force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Prixsupplementaire__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Prixsupplementaire__c</fullName>
    <label>Prix supplémentaire</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>