force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_PrixtotalBxlVMC__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_PrixtotalBxlVMC__c</fullName>
    <formula>Assechmur_PrixtotalVMC__c*1.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix Total - Bruxelles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>