force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Prixtotalmurepais__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Prixtotalmurepais__c</fullName>
    <formula>Assechmur_Nombremurepais__c*Assechmur_Prixmurepais__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix total mur épais</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>