force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Prixvmc__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Prixvmc__c</fullName>
    <label>Prix VMC</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>