force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_PrixVMCencastrer__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_PrixVMCencastrer__c</fullName>
    <formula>Assechmur_VMCaencastrer__c * 200</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix VMC à encastrer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>