force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Produit__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Assechmur_Produit__c.Name</field>
            <operation>equals</operation>
            <value>Plafonnage</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Assechmur_Produit__c</referenceTo>
    <relationshipLabel>Devis (Produit)</relationshipLabel>
    <relationshipName>Devis6</relationshipName>
    <type>Lookup</type>
</CustomField>