force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_ProduitVMCExtracteur200__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_ProduitVMCExtracteur200__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit VMC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>VMC</value>
        </filterItems>
        <filterItems>
            <field>Assechmur_Produit__c.Name</field>
            <operation>equals</operation>
            <value>Extracteur SdB (ASX 200)</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Assechmur_Produit__c</referenceTo>
    <relationshipLabel>Devis (Produit VMC)</relationshipLabel>
    <relationshipName>Devis5</relationshipName>
    <type>Lookup</type>
</CustomField>