force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Radiateurademonter__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Radiateurademonter__c</fullName>
    <label>Radiateur à démonter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>