force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_Raisonprixsupplementaire__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Raisonprixsupplementaire__c</fullName>
    <label>Raison prix supplémentaire</label>
    <type>TextArea</type>
</CustomField>