force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_statutdevis__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_statutdevis__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nouveau</fullName>
                <default>true</default>
                <label>Nouveau</label>
            </value>
            <value>
                <fullName>Envoyé</fullName>
            </value>
            <value>
                <fullName>Accepté</fullName>
            </value>
            <value>
                <fullName>Refusé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>