force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_TarifproduitAFU3__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_TarifproduitAFU3__c</fullName>
    <formula>Assechmur_ProduitVMCAFU3__r.Assechmur_Prix__c</formula>
    <label>Tarif produit standard</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>