force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_TarifproduitExtracteur12V220V__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_TarifproduitExtracteur12V220V__c</fullName>
    <formula>Assechmur_ProduitVMCExtracteur12V220V__r.Assechmur_Prix__c</formula>
    <label>Tarif produit standard</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>