force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_TOUTEENUNavecplafonnage__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_TOUTEENUNavecplafonnage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>&quot;TOUT EN UN&quot; avec plafonnage</label>
    <type>Checkbox</type>
</CustomField>