force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_TVA__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_TVA__c</fullName>
    <label>TVA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21%</fullName>
            </value>
            <value>
                <fullName>6%</fullName>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>