force-app/main/default/objects/Assechmur_Devis__c/fields/Assechmur_VMCaencastrer__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_VMCaencastrer__c</fullName>
    <label>VMC à encastrer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>