force-app/main/default/objects/Assechmur_Devis__c/fields/Montant_total_devis_hors_options__c.field-meta.xml
<CustomField>
    <fullName>Montant_total_devis_hors_options__c</fullName>
    <label>Montant total devis hors options</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>