force-app/main/default/objects/Assechmur_Devis__c/recordTypes/Assechmur_VMC.recordType-meta.xml
<RecordType>
    <fullName>Assechmur_VMC</fullName>
    <active>true</active>
    <label>VMC</label>
</RecordType>