force-app/main/default/objects/Assechmur_Devis__c/recordTypes/Traitement.recordType-meta.xml
<RecordType>
    <fullName>Traitement</fullName>
    <active>true</active>
    <label>Traitement</label>
</RecordType>