force-app/main/default/objects/Assechmur_Devis__c/validationRules/Validation_Marge_Max.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Marge_Max</fullName>
    <active>true</active>
    <errorConditionFormula>Assechmur_Marge__c &gt; 0.15</errorConditionFormula>
    <errorMessage>La marge ne doit pas dépasser 15%</errorMessage>
</ValidationRule>